Add multi-select delete with checkbox

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -5,6 +5,7 @@
     <div>
       <%= link_to "New client request" ,new_client_request_path, method: :get ,class:"btn btn-success border-0 rounded shadow px-3 py-2" %>
       <%= link_to "Add department" ,new_department_path, method: :get ,class:"btn btn-warning border-0 rounded shadow px-3 py-2" %>
+      <%= link_to "Classic view" ,classic_view_path, method: :get ,class:"btn btn-warning border-0 rounded shadow px-3 py-2" %>
     </div>
   </div>
   <div class="d-flex justify-content-around">
